--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <div class="text col-sm-6">Hi <span class="wave">👋</span>,I'm <span class="header">Marcus Tan</span>
         <div class="center">
             <div>
-                <img src="assets/images/dp_male.svg" alt="" class="rounded-circle" height="200" width="200">
+                <img src="assets/images/dp_doge.jpg" alt="" class="rounded-circle" height="300" width="450">
             </div>
             <br/>
             <span style="display: inline;" >I am into <span class="animated-text"
@@ -98,7 +98,6 @@
             </span>
             <div>
                 <div class="social-icons">
-
                     <a class="socialicon twitter" href="https://twitter.com/IWillBeGentle" target="_blank" rel="author">
                         <!-- SVG code for twitter icon -->
                         <svg class="twitter-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
